Fixed card-body spacing for responsiveness

--- a/assets/styles/components/card.scss
+++ b/assets/styles/components/card.scss
@@ -24,9 +24,9 @@
   &__body {
     position: relative;
     z-index: 1;
-    margin-top: -12vw;
+    margin-top: -51.5%;
     width: 100%;
-    height: 12vw;
+    height: 41.5%;
     border-radius: 0 0 8px 8px;
     background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0) 100%);
     padding: 1.5em 1.5em;
